    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
18-Jun-2004
   Additions:
       1. Enhanced http logging to show target server, request header line, and received URL

15-Jun-2004
   Thanks to Phil Zampino for finding a fixing a problem in PseudoServer's handling of very long requests.

   Problems fixed:
        1. PseudoServer would hang when sent a very long request.

13-Jun-2004
   Problems fixed:
        1. bug #737167: Nested frame names are now as specified, previous included names of parent frames.
        2. Return from a request that wrote to a new frame is now the result of that request, was the original page.
        3. Return from a request specifying an unknown frame now opens a new window; previously created a subframe
           in the requesting window.

 3-Jun-2004
   Additions:
        1. WebForm now supports the newUnvalidatedRequest method, which should be used in preference to
           HttpUnitOptions.setParametersValidated( false ). This creates a web request copied from the form
           but not tied to it, so that parameters can be set without validation.

20-Apr-2004
    Problems fixed:
        1. PseudoServer now accepts a full http URL to permit testing of interaction with proxy servers.

14-Mar-2004
    Additions:
        1. RFE #909922: ServletUnit now supports HttpServletRequest.getHeaders
        2. setCheckbox() and toggleCheckbox() have now been expanded to select one of a group of checkboxes by specifying
           its name.
    Problems fixed:
        1. bug #872129: Cookie header set on a web request was ignored in servletunit

9-Mar-2004
    Problems fixed: